[package]
name = "ooxml-omml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Office Math Markup Language (OMML) support for the ooxml library"

[dependencies]
ooxml-xml.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
