[package]
name = "rescribe-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rescribe-core = { workspace = true }
rescribe-read-pandoc-json = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Our MIT fixture suite (tests/run.rs)
# Explicitly use pulldown-cmark backend for consistent behaviour; tree-sitter
# (the default) lacks YAML frontmatter, footnotes, and other GFM extensions.
rescribe-read-markdown = { workspace = true, features = ["pulldown"] }
rescribe-read-commonmark = { workspace = true }
rescribe-read-gfm = { workspace = true }
rescribe-read-html = { workspace = true }

# Pandoc corpus harness (tests/pandoc.rs)
rescribe-read-pandoc-json = { workspace = true }
rescribe-read-rst = { workspace = true }
rescribe-read-latex = { workspace = true }
rescribe-read-org = { workspace = true }
rescribe-read-djot = { workspace = true }
rescribe-read-mediawiki = { workspace = true }
rescribe-read-creole = { workspace = true }
rescribe-read-textile = { workspace = true }
rescribe-read-haddock = { workspace = true }
rescribe-read-jira = { workspace = true }
rescribe-read-tikiwiki = { workspace = true }
rescribe-read-twiki = { workspace = true }
rescribe-read-vimwiki = { workspace = true }
rescribe-read-t2t = { workspace = true }
rescribe-read-pod = { workspace = true }
rescribe-read-man = { workspace = true }
rescribe-read-asciidoc = { workspace = true }
rescribe-read-typst = { workspace = true }
rescribe-read-docbook = { workspace = true }
rescribe-read-jats = { workspace = true }
rescribe-read-dokuwiki = { workspace = true }
rescribe-read-muse = { workspace = true }
rescribe-read-fb2 = { workspace = true }
rescribe-read-xwiki = { workspace = true }
rescribe-read-zimwiki = { workspace = true }
rescribe-read-bbcode = { workspace = true }
rescribe-read-texinfo = { workspace = true }
rescribe-read-markua = { workspace = true }
rescribe-read-fountain = { workspace = true }
rescribe-read-ansi = { workspace = true }
rescribe-read-ipynb = { workspace = true }
rescribe-read-csl-json = { workspace = true }
rescribe-read-native = { workspace = true }
rescribe-read-csv = { workspace = true }
rescribe-read-tsv = { workspace = true }
rescribe-read-opml = { workspace = true }
rescribe-read-ris = { workspace = true }
rescribe-read-bibtex = { workspace = true }
rescribe-read-biblatex = { workspace = true }
rescribe-read-endnotexml = { workspace = true }
rescribe-read-tei = { workspace = true }
rescribe-read-docx = { workspace = true }
rescribe-read-odt = { workspace = true }
rescribe-read-epub = { workspace = true }
rescribe-read-pptx = { workspace = true }
rescribe-read-xlsx = { workspace = true }
ooxml-sml = { workspace = true }
rescribe-read-pdf = { workspace = true }
rescribe-read-rtf = { workspace = true }
rescribe-read-multimarkdown = { workspace = true }

# Bidirectional format writer harness tests
rescribe-write-djot = { workspace = true }
rescribe-write-rtf = { workspace = true }

# Major text format writer smoke tests
rescribe-write-markdown = { workspace = true }
rescribe-write-commonmark = { workspace = true }
rescribe-write-gfm = { workspace = true }
rescribe-write-html = { workspace = true }
rescribe-write-latex = { workspace = true }
rescribe-write-org = { workspace = true }
rescribe-write-rst = { workspace = true }
rescribe-write-asciidoc = { workspace = true }

# Tier D presentation writers (tests/run.rs writer smoke tests)
rescribe-write-beamer = { workspace = true }
rescribe-write-revealjs = { workspace = true }
rescribe-write-slidy = { workspace = true }
rescribe-write-s5 = { workspace = true }
rescribe-write-dzslides = { workspace = true }
rescribe-write-slideous = { workspace = true }
rescribe-write-context = { workspace = true }
rescribe-write-ms = { workspace = true }
rescribe-write-icml = { workspace = true }
rescribe-write-chunkedhtml = { workspace = true }
