[package]
name = "rescribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal document conversion library with fidelity tracking"
keywords = ["document", "conversion", "pandoc", "markdown", "html"]
categories = ["text-processing", "parser-implementations"]

[features]
default = ["std", "markdown", "html"]

# Node definition crates
std = ["dep:rescribe-std"]
math = ["dep:rescribe-math"]

# Format support
markdown = ["dep:rescribe-read-markdown", "dep:rescribe-write-markdown"]
html = ["dep:rescribe-read-html", "dep:rescribe-write-html"]
latex = ["dep:rescribe-read-latex", "dep:rescribe-write-latex"]
org = ["dep:rescribe-read-org", "dep:rescribe-write-org"]
plaintext = ["dep:rescribe-write-plaintext"]
pdf = ["dep:rescribe-read-pdf"]
docx = ["dep:rescribe-read-docx", "dep:rescribe-write-docx"]
ipynb = ["dep:rescribe-read-ipynb", "dep:rescribe-write-ipynb"]
xlsx = ["dep:rescribe-read-xlsx", "dep:rescribe-write-xlsx"]
epub = ["dep:rescribe-read-epub", "dep:rescribe-write-epub"]
djot = ["dep:rescribe-read-djot", "dep:rescribe-write-djot"]
opml = ["dep:rescribe-read-opml", "dep:rescribe-write-opml"]
mediawiki = ["dep:rescribe-read-mediawiki", "dep:rescribe-write-mediawiki"]
bibtex = ["dep:rescribe-read-bibtex", "dep:rescribe-write-bibtex"]
csl-json = ["dep:rescribe-read-csl-json", "dep:rescribe-write-csl-json"]
docbook = ["dep:rescribe-read-docbook", "dep:rescribe-write-docbook"]
rst = ["dep:rescribe-read-rst", "dep:rescribe-write-rst"]
asciidoc = ["dep:rescribe-read-asciidoc", "dep:rescribe-write-asciidoc"]
typst = ["dep:rescribe-read-typst", "dep:rescribe-write-typst"]
ansi = ["dep:rescribe-write-ansi"]
dokuwiki = ["dep:rescribe-read-dokuwiki", "dep:rescribe-write-dokuwiki"]
jats = ["dep:rescribe-read-jats", "dep:rescribe-write-jats"]
tei = ["dep:rescribe-read-tei", "dep:rescribe-write-tei"]
man = ["dep:rescribe-read-man", "dep:rescribe-write-man"]
jira = ["dep:rescribe-read-jira", "dep:rescribe-write-jira"]
creole = ["dep:rescribe-read-creole", "dep:rescribe-write-creole"]
textile = ["dep:rescribe-read-textile", "dep:rescribe-write-textile"]
haddock = ["dep:rescribe-read-haddock", "dep:rescribe-write-haddock"]
muse = ["dep:rescribe-read-muse", "dep:rescribe-write-muse"]
t2t = ["dep:rescribe-read-t2t", "dep:rescribe-write-t2t"]
rtf = ["dep:rescribe-read-rtf", "dep:rescribe-write-rtf"]
vimwiki = ["dep:rescribe-read-vimwiki", "dep:rescribe-write-vimwiki"]
zimwiki = ["dep:rescribe-read-zimwiki", "dep:rescribe-write-zimwiki"]
pod = ["dep:rescribe-read-pod", "dep:rescribe-write-pod"]
markua = ["dep:rescribe-read-markua", "dep:rescribe-write-markua"]
fb2 = ["dep:rescribe-read-fb2", "dep:rescribe-write-fb2"]
texinfo = ["dep:rescribe-read-texinfo", "dep:rescribe-write-texinfo"]
tikiwiki = ["dep:rescribe-read-tikiwiki", "dep:rescribe-write-tikiwiki"]
twiki = ["dep:rescribe-read-twiki", "dep:rescribe-write-twiki"]
xwiki = ["dep:rescribe-read-xwiki", "dep:rescribe-write-xwiki"]
revealjs = ["dep:rescribe-write-revealjs"]
slidy = ["dep:rescribe-write-slidy"]
s5 = ["dep:rescribe-write-s5"]
dzslides = ["dep:rescribe-write-dzslides"]
bbcode = ["dep:rescribe-read-bbcode", "dep:rescribe-write-bbcode"]
ansi-read = ["dep:rescribe-read-ansi"]
beamer = ["dep:rescribe-write-beamer"]
csv = ["dep:rescribe-read-csv", "dep:rescribe-write-csv"]
context = ["dep:rescribe-write-context"]
ms = ["dep:rescribe-write-ms"]
chunkedhtml = ["dep:rescribe-write-chunkedhtml"]
tsv = ["dep:rescribe-read-tsv", "dep:rescribe-write-tsv"]
icml = ["dep:rescribe-write-icml"]
slideous = ["dep:rescribe-write-slideous"]
odt = ["dep:rescribe-read-odt", "dep:rescribe-write-odt"]
native = ["dep:rescribe-read-native", "dep:rescribe-write-native"]
pptx = ["dep:rescribe-read-pptx", "dep:rescribe-write-pptx"]
commonmark = ["dep:rescribe-read-commonmark", "dep:rescribe-write-commonmark"]
gfm = ["dep:rescribe-read-gfm", "dep:rescribe-write-gfm"]
ris = ["dep:rescribe-read-ris", "dep:rescribe-write-ris"]
endnotexml = ["dep:rescribe-read-endnotexml", "dep:rescribe-write-endnotexml"]
biblatex = ["dep:rescribe-read-biblatex", "dep:rescribe-write-biblatex"]
markdown-strict = ["dep:rescribe-read-markdown-strict", "dep:rescribe-write-markdown-strict"]
multimarkdown = ["dep:rescribe-read-multimarkdown", "dep:rescribe-write-multimarkdown"]
fountain = ["dep:rescribe-read-fountain", "dep:rescribe-write-fountain"]

# All formats
pandoc-json = ["dep:rescribe-read-pandoc-json", "dep:rescribe-write-pandoc-json"]

# All formats
all = ["std", "math", "markdown", "html", "latex", "org", "plaintext", "pdf", "docx", "ipynb", "xlsx", "epub", "djot", "opml", "mediawiki", "bibtex", "csl-json", "docbook", "rst", "asciidoc", "typst", "ansi", "dokuwiki", "jats", "tei", "man", "jira", "creole", "textile", "haddock", "muse", "t2t", "rtf", "vimwiki", "zimwiki", "pod", "markua", "fb2", "texinfo", "tikiwiki", "twiki", "xwiki", "revealjs", "slidy", "s5", "dzslides", "bbcode", "ansi-read", "beamer", "csv", "context", "ms", "chunkedhtml", "tsv", "icml", "slideous", "odt", "native", "pptx", "commonmark", "gfm", "ris", "endnotexml", "biblatex", "markdown-strict", "multimarkdown", "fountain", "pandoc-json"]

[dependencies]
# Core is always included
rescribe-core = { workspace = true }

# Node definitions (optional)
rescribe-std = { workspace = true, optional = true }
rescribe-math = { workspace = true, optional = true }

# Readers (optional)
rescribe-read-markdown = { workspace = true, optional = true }
rescribe-read-html = { workspace = true, optional = true }
rescribe-read-latex = { workspace = true, optional = true }
rescribe-read-org = { workspace = true, optional = true }
rescribe-read-pdf = { workspace = true, optional = true }
rescribe-read-docx = { workspace = true, optional = true }
rescribe-read-ipynb = { workspace = true, optional = true }
rescribe-read-xlsx = { workspace = true, optional = true }
rescribe-read-epub = { workspace = true, optional = true }
rescribe-read-djot = { workspace = true, optional = true }
rescribe-read-opml = { workspace = true, optional = true }
rescribe-read-mediawiki = { workspace = true, optional = true }
rescribe-read-bibtex = { workspace = true, optional = true }
rescribe-read-csl-json = { workspace = true, optional = true }
rescribe-read-docbook = { workspace = true, optional = true }
rescribe-read-rst = { workspace = true, optional = true }
rescribe-read-asciidoc = { workspace = true, optional = true }
rescribe-read-typst = { workspace = true, optional = true }
rescribe-read-dokuwiki = { workspace = true, optional = true }
rescribe-read-jats = { workspace = true, optional = true }
rescribe-read-tei = { workspace = true, optional = true }
rescribe-read-man = { workspace = true, optional = true }
rescribe-read-jira = { workspace = true, optional = true }
rescribe-read-creole = { workspace = true, optional = true }
rescribe-read-textile = { workspace = true, optional = true }
rescribe-read-haddock = { workspace = true, optional = true }
rescribe-read-muse = { workspace = true, optional = true }
rescribe-read-t2t = { workspace = true, optional = true }
rescribe-read-rtf = { workspace = true, optional = true }
rescribe-read-vimwiki = { workspace = true, optional = true }
rescribe-read-zimwiki = { workspace = true, optional = true }
rescribe-read-pod = { workspace = true, optional = true }
rescribe-read-markua = { workspace = true, optional = true }
rescribe-read-fb2 = { workspace = true, optional = true }
rescribe-read-texinfo = { workspace = true, optional = true }
rescribe-read-tikiwiki = { workspace = true, optional = true }
rescribe-read-twiki = { workspace = true, optional = true }
rescribe-read-xwiki = { workspace = true, optional = true }
rescribe-read-bbcode = { workspace = true, optional = true }
rescribe-read-ansi = { workspace = true, optional = true }
rescribe-read-csv = { workspace = true, optional = true }
rescribe-read-tsv = { workspace = true, optional = true }
rescribe-read-native = { workspace = true, optional = true }
rescribe-read-odt = { workspace = true, optional = true }
rescribe-read-pptx = { workspace = true, optional = true }
rescribe-read-commonmark = { workspace = true, optional = true }
rescribe-read-gfm = { workspace = true, optional = true }
rescribe-read-ris = { workspace = true, optional = true }
rescribe-read-endnotexml = { workspace = true, optional = true }
rescribe-read-biblatex = { workspace = true, optional = true }
rescribe-read-markdown-strict = { workspace = true, optional = true }
rescribe-read-multimarkdown = { workspace = true, optional = true }
rescribe-read-fountain = { workspace = true, optional = true }
rescribe-read-pandoc-json = { workspace = true, optional = true }

# Writers (optional)
rescribe-write-markdown = { workspace = true, optional = true }
rescribe-write-html = { workspace = true, optional = true }
rescribe-write-latex = { workspace = true, optional = true }
rescribe-write-org = { workspace = true, optional = true }
rescribe-write-plaintext = { workspace = true, optional = true }
rescribe-write-docx = { workspace = true, optional = true }
rescribe-write-ipynb = { workspace = true, optional = true }
rescribe-write-epub = { workspace = true, optional = true }
rescribe-write-djot = { workspace = true, optional = true }
rescribe-write-opml = { workspace = true, optional = true }
rescribe-write-mediawiki = { workspace = true, optional = true }
rescribe-write-csl-json = { workspace = true, optional = true }
rescribe-write-docbook = { workspace = true, optional = true }
rescribe-write-rst = { workspace = true, optional = true }
rescribe-write-asciidoc = { workspace = true, optional = true }
rescribe-write-bibtex = { workspace = true, optional = true }
rescribe-write-typst = { workspace = true, optional = true }
rescribe-write-ansi = { workspace = true, optional = true }
rescribe-write-dokuwiki = { workspace = true, optional = true }
rescribe-write-jats = { workspace = true, optional = true }
rescribe-write-tei = { workspace = true, optional = true }
rescribe-write-man = { workspace = true, optional = true }
rescribe-write-jira = { workspace = true, optional = true }
rescribe-write-creole = { workspace = true, optional = true }
rescribe-write-textile = { workspace = true, optional = true }
rescribe-write-haddock = { workspace = true, optional = true }
rescribe-write-muse = { workspace = true, optional = true }
rescribe-write-t2t = { workspace = true, optional = true }
rescribe-write-rtf = { workspace = true, optional = true }
rescribe-write-vimwiki = { workspace = true, optional = true }
rescribe-write-zimwiki = { workspace = true, optional = true }
rescribe-write-pod = { workspace = true, optional = true }
rescribe-write-markua = { workspace = true, optional = true }
rescribe-write-fb2 = { workspace = true, optional = true }
rescribe-write-texinfo = { workspace = true, optional = true }
rescribe-write-tikiwiki = { workspace = true, optional = true }
rescribe-write-twiki = { workspace = true, optional = true }
rescribe-write-xwiki = { workspace = true, optional = true }
rescribe-write-revealjs = { workspace = true, optional = true }
rescribe-write-slidy = { workspace = true, optional = true }
rescribe-write-s5 = { workspace = true, optional = true }
rescribe-write-dzslides = { workspace = true, optional = true }
rescribe-write-bbcode = { workspace = true, optional = true }
rescribe-write-beamer = { workspace = true, optional = true }
rescribe-write-csv = { workspace = true, optional = true }
rescribe-write-context = { workspace = true, optional = true }
rescribe-write-ms = { workspace = true, optional = true }
rescribe-write-chunkedhtml = { workspace = true, optional = true }
rescribe-write-tsv = { workspace = true, optional = true }
rescribe-write-icml = { workspace = true, optional = true }
rescribe-write-slideous = { workspace = true, optional = true }
rescribe-write-odt = { workspace = true, optional = true }
rescribe-write-native = { workspace = true, optional = true }
rescribe-write-pptx = { workspace = true, optional = true }
rescribe-write-commonmark = { workspace = true, optional = true }
rescribe-write-gfm = { workspace = true, optional = true }
rescribe-write-ris = { workspace = true, optional = true }
rescribe-write-xlsx = { workspace = true, optional = true }
rescribe-write-endnotexml = { workspace = true, optional = true }
rescribe-write-biblatex = { workspace = true, optional = true }
rescribe-write-markdown-strict = { workspace = true, optional = true }
rescribe-write-multimarkdown = { workspace = true, optional = true }
rescribe-write-fountain = { workspace = true, optional = true }
rescribe-write-pandoc-json = { workspace = true, optional = true }

[dev-dependencies]
rescribe-read-markdown = { workspace = true }
rescribe-read-html = { workspace = true }
rescribe-write-markdown = { workspace = true }
rescribe-write-html = { workspace = true }
rescribe-std = { workspace = true }
